Final fix of gradient overflow

--- a/public/assets/style.bundle.css
+++ b/public/assets/style.bundle.css
@@ -144,7 +144,7 @@ a {
   display: block;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   z-index: 1; }
